- restored (and improved) possibility to use wx with MFC broken in 2.5.2
- fixed wxTextCtrl::SetMaxLength for rich edit controls
- fixed flat style for toolbars under XP, Windows Classic style
- fixed truncation of transferred data in wxConnection under unicode build
- wxChoice and wxComboBox dropdown background can be set now too (Adrian Lupei)

wxUniv/X11:

- fixed fatal crash when opening a menu

wxWinCE:

- added native SmartPhone wxTextCtrl implementation using spinners
- added native SmartPhone wxChoice implementation using spinners
- added automatized but customizable handling of native SmartPhone menus
- fixed wxRadioBox and wxStaticBox

wxHTML:

- added support for nested index entries and index entries pointing to more
  than one page to wxHtmlHelpController


2.5.2
-----

All:

- Hindi translation added (Dhananjaya Sharma)
- Brazilian Portuguese translation added (E. A. Tacao)
- wxDynamicCast() now uses static_cast<wxObject *> internally and so using it
  with anything not deriving from wxObject will fail at compile time (instead
  of run-time) now
- when wxUSE_STL == 1 and STL provides quasi-standard hash_map/hash_set,
  wxHashMap/wxHashSet are just typedefs for them. This makes impossible
  to forward declare these classes.

All (GUI):

- wxHtmlWindow now delays image scaling until rendering,
  resulting in much better display of scaled images
- Added UpdateSize to wxSplitterWindow to allow layout while hidden
- implemented Freeze/Thaw() for wxGenericTreeCtrl (Kevin Hock)
- support for KOI8-U encoding added (Yuriy Tkachenko)
- The old wxADJUST_MINSIZE behaviour is now the default behaviour for
  sizer items that are windows.  This means that GetAdjustedBestSize
  will now be called by default to determine the minimum size that a
  window in a sizer should have.  If you want to still use the initial
  size (and not the BestSize) then use the wxFIXED_MINSIZE flag.  When
  windows are added to a sizer their initial size is made the window's